--- a/static/css/members.css
+++ b/static/css/members.css
@@ -4,7 +4,9 @@ body {
     display: grid;
     grid-template-columns: 8em 1.5fr 0.5fr;
     grid-template-rows: 5vh 5vh 6em 1fr 1fr;
-    font-family: Arial, sans-serif
+    font-family: Arial, sans-serif;
+    margin: 0;
+    height: 100vh;
 }
 
 h1 {
